--- a/src/components/game.css
+++ b/src/components/game.css
@@ -18,6 +18,14 @@
   transform: rotateY(180deg);
 }
 
+.card:hover {
+  transform: scale(0.95);
+  transition: transform .5s;
+  transform: rotateY(180deg);
+}
+
+
+
 .card.flip {
   transform: rotateY(180deg);
 }
@@ -34,3 +42,15 @@
   transform: rotateY(180deg);
 
 }
+
+.csscontainer{
+  display: grid;
+  grid-template-columns: 150px 150px 150px 150px;
+  grid-template-rows: 150px 150px 150px 150px; 
+  column-gap: 10px;
+  row-gap: 10px;
+  background-color: black;
+  color: black;
+  justify-content: center;
+}
+
